css/style.css
/* ... */
footer.template-footer div.widget-part-area {
  display: flex;
  align-items: center;
}
@media (max-width: 1023px) {
  footer.template-footer div.widget-part-area {
    flex-wrap: wrap;
  }
  footer.template-footer div.widget-part-area .footer-widget-line:first-child {
    display: none;
  }
}
footer.template-footer div.widget-part-area .footer-widget-line {
  width: 25%;
  min-height: 440px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-left: 90px;
  border-left: 1px solid #242424;
  background: #1f1f1f;
}
@media (max-width: 1239px) {
  footer.template-footer div.widget-part-area .footer-widget-line {
    padding-left: 30px;
    min-height: 360px;
  }
}
@media (max-width: 1023px) {
  footer.template-footer div.widget-part-area .footer-widget-line {
    width: 33.3333%;
  }
}
@media (max-width: 767px) {
  footer.template-footer div.widget-part-area .footer-widget-line {
    width: 100%;
    min-height: 40px;
    padding: 30px;
    border-left: none;
    border-bottom: 1px solid #242424;
  }
}
footer.template-footer div.widget-part-area .footer-widget-line .image-widget {
  text-align: center;
  margin-left: -90px;
  margin-right: -1px;
}
footer.template-footer div.widget-part-area .footer-widget-line .image-widget img {
  max-width: 200px;
  margin: 0 auto;
}
footer.template-footer div.widget-part-area .footer-widget-line h5 {
  color: rgba(255, 255, 255, 0.8);
  font-size: 16px;
  font-weight: 300;
  margin: 0 0 25px;
  text-transform: uppercase;
}
footer.template-footer div.widget-part-area .footer-widget-line ul.custom-list {
  padding: 0;
  margin: 0;
}
footer.template-footer div.widget-part-area .footer-widget-line ul.custom-list li {
  display: block;
}
footer.template-footer div.widget-part-area .footer-widget-line ul.custom-list li a {
  color: #ffffff;
  font-size: 15px;
  line-height: 30px;
  text-decoration: underline !important;
}

a.go-top {
  position: absolute;
  top: -90px;
  right: 30px;
  width: 60px;
  height: 60px;
  color: #ffffff;
  font-size: 30px;
  line-height: 60px;
  text-align: center;
  background: #d92828;
}
a.go-top:hover {
  opacity: 0.8;
}
@media (max-width: 1023px) {
  a.go-top {
    display: none;
  }
}

/*-------------------------------------------------*/
/* =  Responsive Part
/*-------------------------------------------------*/
@media (max-height: 800px) {
  header .header-line div.social-line {
    padding: 15px 0;
    height: calc(100vh - 300px);
  }
  header .header-line div.social-line.active {
    height: calc(100vh - 400px);
  }
  header .header-line div.copyright-line {
    height: 200px;
  }
}

/* ---- mobile loader centering fix ---- */
@media (max-width: 767px) {
  .ip-header {
    min-height: 100vh;
  }
  .ip-logo {
    left: 50% !important;
    right: auto !important;
    top: 50% !important;
    width: auto !important;
    height: auto !important;
    margin: 0 !important;
    padding: 0 !important;
    text-align: center;
    transform: translate3d(-50%, -50%, 0);
  }
  .ip-logo img {
    max-width: 60vw;
    display: block;
  }
  .ip-loader {
    left: 50% !important;
    right: auto !important;
    width: auto !important;
    bottom: 15% !important;
    transform: translateX(-50%);
  }
  .ip-loader .ip-inner {
    margin: 0 !important;
  }
  .loaded .ip-logo {
    animation: animLoadedLogoMobile 1s cubic-bezier(0.7, 0, 0.3, 1) forwards;
  }
  .loaded .ip-loader {
    animation: animLoadedLoaderMobile 0.5s cubic-bezier(0.7, 0, 0.3, 1) forwards;
  }
  @keyframes animLoadedLogoMobile {
    to {
      transform: translate3d(-50%, 0, 0) scale3d(0.65, 0.65, 1);
      opacity: 0;
    }
  }
  @keyframes animLoadedLoaderMobile {
    to {
      transform: translate3d(-50%, -100%, 0) scale3d(0.3, 0.3, 1);
      opacity: 0;
    }
  }
}

/*# sourceMappingURL=style.css.map */

